--- a/composer.json
+++ b/composer.json
@@ -11,6 +11,7 @@
         "dyrynda/laravel-cascade-soft-deletes": "^4.1",
         "fruitcake/laravel-cors": "^2.0",
         "guzzlehttp/guzzle": "^7.0.1",
+        "imliam/laravel-env-set-command": "^1.0",
         "laravel/framework": "^8.75",
         "laravel/horizon": "^5.7",
         "laravel/sanctum": "^2.11",
