feat: add sqlite database on git CI in test.yml

--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -48,3 +48,8 @@ jobs:
 
       - name: Tests
         run: ./vendor/bin/pest
+
+      - name: Create SQLite database
+        run: |
+          mkdir -p database
+          touch database/database.sqlite
